--- a/assignment2/task3.ipynb
+++ b/assignment2/task3.ipynb
@@ -27,15 +27,16 @@
     "from transformers import BertTokenizerFast, BertForQuestionAnswering, TrainingArguments, Trainer\n",
     "import numpy as np\n",
     "import torch\n",
-    "import torch.nn as nn\n",
     "from torchcrf import CRF\n",
+    "from typing import Optional, Tuple, Union\n",
+    "from transformers.modeling_outputs import QuestionAnsweringModelOutput\n",
     "\n",
     "\n",
     "torch.manual_seed(seed=42)\n",
     "wandb.login()\n",
     "\n",
     "dataset = load_dataset('rajpurkar/squad_v2')\n",
-    "dataset['train'] = dataset['train'].shuffle(seed=42).select(range(5000)) #select 32k samples for finetuning\n",
+    "dataset['train'] = dataset['train'].shuffle(seed=42).select(range(16000)) #select 16k samples for finetuning\n",
     "tokenizer = BertTokenizerFast.from_pretrained('spanbert/spanbert-large-cased')"
    ]
   },
@@ -114,11 +115,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bd74167dbeaa4a3eb6e596140b42a00c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/16000 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "tokenized_dataset = dataset.map(preprocess_dataset, batched=True, remove_columns=dataset[\"train\"].column_names)"
+    "tokenized_dataset = dataset.map(preprocess_dataset, batched=True, remove_columns=dataset[\"train\"].column_names)\n",
+    "tokenized_dataset"
    ]
   },
   {
@@ -130,9 +147,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertForQuestionAnswering were not initialized from the model checkpoint at SpanBERT/spanbert-large-cased and are newly initialized: ['qa_outputs.bias', 'qa_outputs.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.19.8"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/home/gpu1/himanshu/workspace/wandb/run-20250316_180149-w6s5dcoc</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/cv-himanshu/finetuning-spanberts/runs/w6s5dcoc' target=\"_blank\">magic-universe-54</a></strong> to <a href='https://wandb.ai/cv-himanshu/finetuning-spanberts' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/cv-himanshu/finetuning-spanberts' target=\"_blank\">https://wandb.ai/cv-himanshu/finetuning-spanberts</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/cv-himanshu/finetuning-spanberts/runs/w6s5dcoc' target=\"_blank\">https://wandb.ai/cv-himanshu/finetuning-spanberts/runs/w6s5dcoc</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/cv-himanshu/finetuning-spanberts/runs/w6s5dcoc?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
+      ],
+      "text/plain": [
+       "<wandb.sdk.wandb_run.Run at 0x7f6dfeb26120>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "spanbert = BertForQuestionAnswering.from_pretrained('SpanBERT/spanbert-large-cased')\n",
     "\n",
@@ -143,12 +242,84 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m The `run_name` is currently set to the same value as `TrainingArguments.output_dir`. If this was not intended, please specify a different run name by setting the `TrainingArguments.run_name` parameter.\n",
+      "/home/gpu1/anaconda3/envs/newenv/lib/python3.13/site-packages/torch/nn/parallel/_functions.py:70: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='728' max='756' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [728/756 30:27 < 01:10, 0.40 it/s, Epoch 5.77/6]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2.934400</td>\n",
+       "      <td>1.997270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1.748200</td>\n",
+       "      <td>1.543757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1.472100</td>\n",
+       "      <td>1.373107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>1.282300</td>\n",
+       "      <td>1.285686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>1.185300</td>\n",
+       "      <td>1.266206</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/gpu1/anaconda3/envs/newenv/lib/python3.13/site-packages/torch/nn/parallel/_functions.py:70: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "training_args = TrainingArguments(output_dir='./results', eval_strategy='epoch',\n",
     "                learning_rate=1e-5, num_train_epochs=6, weight_decay=0.01,\n",
     "                per_device_train_batch_size=64, per_device_eval_batch_size=64,\n",
-    "                report_to='wandb', logging_dir='./logs', logging_steps=50)\n",
+    "                report_to='wandb', logging_dir='./logs', logging_steps=50,\n",
+    "                label_names=['start_positions', 'end_positions'],)\n",
     "\n",
     "trainer = Trainer(model=spanbert, args=training_args, processing_class=tokenizer,\n",
     "    train_dataset=tokenized_dataset['train'], eval_dataset=tokenized_dataset['validation'])\n",
@@ -180,23 +351,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Optional, Tuple, Union\n",
-    "from transformers.modeling_outputs import QuestionAnsweringModelOutput\n",
-    "from transformers import BertPreTrainedModel, BertModel\n",
-    "from torch.nn import CrossEntropyLoss\n",
-    "\n",
     "class SpanBERTCRF(BertForQuestionAnswering):\n",
     "    def __init__(self, config):\n",
     "        super().__init__(config)\n",
-    "        self.num_labels = config.num_labels\n",
-    "        self.crf = CRF(num_tags=config.num_labels, batch_first=True) #will learn transitions between start and end positions\n",
+    "        self.start_crf = CRF(num_tags=config.num_labels, batch_first=True)  # CRF for start positions\n",
+    "        self.end_crf = CRF(num_tags=config.num_labels, batch_first=True)  # CRF for end positions\n",
     "\n",
-    "    def forward(\n",
-    "       self,\n",
+    "    def forward( self,\n",
     "        input_ids: Optional[torch.Tensor] = None,\n",
     "        attention_mask: Optional[torch.Tensor] = None,\n",
     "        token_type_ids: Optional[torch.Tensor] = None,\n",
@@ -219,12 +384,9 @@
     "            Positions are clamped to the length of the sequence (`sequence_length`). Position outside of the sequence\n",
     "            are not taken into account for computing the loss.\n",
     "        \"\"\"\n",
-    "        \n",
     "        return_dict = return_dict if return_dict is not None else self.config.use_return_dict\n",
     "\n",
-    "        # Get BERT embeddings\n",
-    "        outputs = self.bert(\n",
-    "            input_ids,\n",
+    "        outputs = self.bert( input_ids,\n",
     "            attention_mask=attention_mask,\n",
     "            token_type_ids=token_type_ids,\n",
     "            position_ids=position_ids,\n",
@@ -272,8 +434,8 @@
     "            stacked_logits = torch.stack([start_logits, end_logits], dim=-1)  # (batch_size, seq_length, 2)\n",
     "\n",
     "            # Compute CRF loss separately for start and end logits\n",
-    "            start_loss = -self.crf(stacked_logits, start_labels, mask=attention_mask.bool(), reduction=\"mean\")\n",
-    "            end_loss = -self.crf(stacked_logits, end_labels, mask=attention_mask.bool(), reduction=\"mean\")\n",
+    "            start_loss = -self.start_crf(stacked_logits, start_labels, mask=attention_mask.bool(), reduction=\"mean\")\n",
+    "            end_loss = -self.end_crf(stacked_logits, end_labels, mask=attention_mask.bool(), reduction=\"mean\")\n",
     "            total_loss = (start_loss + end_loss) / 2\n",
     "\n",
     "        if not return_dict:\n",
@@ -291,211 +453,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of SpanBERTCRF were not initialized from the model checkpoint at SpanBERT/spanbert-large-cased and are newly initialized: ['crf.end_transitions', 'crf.start_transitions', 'crf.transitions', 'qa_outputs.bias', 'qa_outputs.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.19.8"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/home/gpu1/himanshu/workspace/wandb/run-20250316_135413-3b5k4yss</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/cv-himanshu/finetuning-spanberts/runs/3b5k4yss' target=\"_blank\">glowing-shadow-45</a></strong> to <a href='https://wandb.ai/cv-himanshu/finetuning-spanberts' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/cv-himanshu/finetuning-spanberts' target=\"_blank\">https://wandb.ai/cv-himanshu/finetuning-spanberts</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/cv-himanshu/finetuning-spanberts/runs/3b5k4yss' target=\"_blank\">https://wandb.ai/cv-himanshu/finetuning-spanberts/runs/3b5k4yss</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/cv-himanshu/finetuning-spanberts/runs/3b5k4yss?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
-      ],
-      "text/plain": [
-       "<wandb.sdk.wandb_run.Run at 0x7fc029fb8ec0>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model = SpanBERTCRF.from_pretrained('SpanBERT/spanbert-large-cased')\n",
+    "spanbert_crf = SpanBERTCRF.from_pretrained('SpanBERT/spanbert-large-cased')\n",
     "\n",
     "wandb.init(entity='cv-himanshu', project='finetuning-spanberts')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m The `run_name` is currently set to the same value as `TrainingArguments.output_dir`. If this was not intended, please specify a different run name by setting the `TrainingArguments.run_name` parameter.\n",
-      "/home/gpu1/anaconda3/envs/newenv/lib/python3.13/site-packages/torch/nn/parallel/_functions.py:70: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='80' max='80' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [80/80 06:22, Epoch 2/2]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Epoch</th>\n",
-       "      <th>Training Loss</th>\n",
-       "      <th>Validation Loss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>No log</td>\n",
-       "      <td>5.986413</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>13.753800</td>\n",
-       "      <td>4.797614</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/gpu1/anaconda3/envs/newenv/lib/python3.13/site-packages/torch/nn/parallel/_functions.py:70: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "TrainOutput(global_step=80, training_loss=10.642256927490234, metrics={'train_runtime': 386.1617, 'train_samples_per_second': 25.984, 'train_steps_per_second': 0.207, 'total_flos': 9318646205607936.0, 'train_loss': 10.642256927490234, 'epoch': 2.0})"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "training_args = TrainingArguments(output_dir='./results', eval_strategy='epoch',\n",
-    "                learning_rate=1e-5, num_train_epochs=2, weight_decay=0.01,\n",
+    "training_args_crf = TrainingArguments(output_dir='./results', eval_strategy='epoch',\n",
+    "                learning_rate=2e-5, num_train_epochs=6, weight_decay=0.01,\n",
     "                per_device_train_batch_size=64, per_device_eval_batch_size=64,\n",
     "                report_to='wandb', logging_dir='./logs', logging_steps=50,\n",
     "                label_names=['start_positions', 'end_positions'],)\n",
     "\n",
-    "trainer = Trainer(model=model, args=training_args, processing_class=tokenizer, \n",
+    "trainer_crf = Trainer(model=spanbert_crf, args=training_args_crf, processing_class=tokenizer, \n",
     "    train_dataset=tokenized_dataset['train'], eval_dataset=tokenized_dataset['validation'])\n",
     "\n",
-    "trainer.train()"
+    "trainer_crf.train()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n",
-      "SpanBERT Exact Match Score: 0.00 %\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "preds = trainer.predict(tokenized_dataset['validation'])\n",
+    "preds = trainer_crf.predict(tokenized_dataset['validation'])\n",
     "\n",
-    "spanbert_em = compute_em(preds)\n",
-    "print(spanbert_em)\n",
-    "print(f\"SpanBERT Exact Match Score: {spanbert_em:.2f} %\")"
+    "spanbert_crf_em = compute_em(preds)\n",
+    "print(spanbert_crf_em)\n",
+    "print(f\"SpanBERT Exact Match Score: {spanbert_crf_em:.2f} %\")\n",
+    "\n",
+    "wandb.finish()"
    ]
   }
  ],
