task3 v1.1: code works (hopefully)

--- a/assignment2/task3.ipynb
+++ b/assignment2/task3.ipynb
@@ -9,40 +9,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Using wandb-core as the SDK backend.  Please refer to https://wandb.me/wandb-core for more information.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mhimanshu22216\u001b[0m to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import wandb\n",
     "from datasets import load_dataset\n",
     "from transformers import BertTokenizerFast, BertForQuestionAnswering, TrainingArguments, Trainer\n",
     "import numpy as np\n",
     "import torch\n",
+    "import torch.nn as nn\n",
     "from torchcrf import CRF\n",
     "from typing import Optional, Tuple, Union\n",
     "from transformers.modeling_outputs import QuestionAnsweringModelOutput\n",
-    "\n",
+    "from collections import defaultdict\n",
     "\n",
     "torch.manual_seed(seed=42)\n",
     "wandb.login()\n",
     "\n",
     "dataset = load_dataset('rajpurkar/squad_v2')\n",
-    "dataset['train'] = dataset['train'].shuffle(seed=42).select(range(16000)) #select 16k samples for finetuning\n",
+    "dataset['train'] = dataset['train'].shuffle(seed=42).select(range(48000)) #select 48k samples for finetuning\n",
     "tokenizer = BertTokenizerFast.from_pretrained('spanbert/spanbert-large-cased')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,22 +109,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd74167dbeaa4a3eb6e596140b42a00c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/16000 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenized_dataset = dataset.map(preprocess_dataset, batched=True, remove_columns=dataset[\"train\"].column_names)\n",
     "tokenized_dataset"
@@ -147,91 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of BertForQuestionAnswering were not initialized from the model checkpoint at SpanBERT/spanbert-large-cased and are newly initialized: ['qa_outputs.bias', 'qa_outputs.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.19.8"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/home/gpu1/himanshu/workspace/wandb/run-20250316_180149-w6s5dcoc</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/cv-himanshu/finetuning-spanberts/runs/w6s5dcoc' target=\"_blank\">magic-universe-54</a></strong> to <a href='https://wandb.ai/cv-himanshu/finetuning-spanberts' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/cv-himanshu/finetuning-spanberts' target=\"_blank\">https://wandb.ai/cv-himanshu/finetuning-spanberts</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/cv-himanshu/finetuning-spanberts/runs/w6s5dcoc' target=\"_blank\">https://wandb.ai/cv-himanshu/finetuning-spanberts/runs/w6s5dcoc</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/cv-himanshu/finetuning-spanberts/runs/w6s5dcoc?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
-      ],
-      "text/plain": [
-       "<wandb.sdk.wandb_run.Run at 0x7f6dfeb26120>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "spanbert = BertForQuestionAnswering.from_pretrained('SpanBERT/spanbert-large-cased')\n",
     "\n",
@@ -242,78 +137,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m The `run_name` is currently set to the same value as `TrainingArguments.output_dir`. If this was not intended, please specify a different run name by setting the `TrainingArguments.run_name` parameter.\n",
-      "/home/gpu1/anaconda3/envs/newenv/lib/python3.13/site-packages/torch/nn/parallel/_functions.py:70: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='728' max='756' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [728/756 30:27 < 01:10, 0.40 it/s, Epoch 5.77/6]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Epoch</th>\n",
-       "      <th>Training Loss</th>\n",
-       "      <th>Validation Loss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>2.934400</td>\n",
-       "      <td>1.997270</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>1.748200</td>\n",
-       "      <td>1.543757</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>1.472100</td>\n",
-       "      <td>1.373107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>1.282300</td>\n",
-       "      <td>1.285686</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>1.185300</td>\n",
-       "      <td>1.266206</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/gpu1/anaconda3/envs/newenv/lib/python3.13/site-packages/torch/nn/parallel/_functions.py:70: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "training_args = TrainingArguments(output_dir='./results', eval_strategy='epoch',\n",
     "                learning_rate=1e-5, num_train_epochs=6, weight_decay=0.01,\n",
@@ -358,6 +182,16 @@
     "class SpanBERTCRF(BertForQuestionAnswering):\n",
     "    def __init__(self, config):\n",
     "        super().__init__(config)\n",
+    "        # Additional hidden layers\n",
+    "        self.fc1 = nn.Linear(config.hidden_size, config.hidden_size // 2)\n",
+    "        self.fc2 = nn.Linear(config.hidden_size // 2, config.hidden_size // 4)\n",
+    "        \n",
+    "        self.start_classifier = nn.Linear(config.hidden_size // 4, self.num_labels)\n",
+    "        self.end_classifier = nn.Linear(config.hidden_size // 4, self.num_labels)\n",
+    "        \n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.dropout = nn.Dropout(config.hidden_dropout_prob)\n",
+    "\n",
     "        self.start_crf = CRF(num_tags=config.num_labels, batch_first=True)  # CRF for start positions\n",
     "        self.end_crf = CRF(num_tags=config.num_labels, batch_first=True)  # CRF for end positions\n",
     "\n",
@@ -399,11 +233,15 @@
     "\n",
     "        sequence_output = outputs[0]  # Shape: (batch_size, sequence_length, hidden_size)\n",
     "\n",
-    "        # Compute logits\n",
-    "        logits = self.qa_outputs(sequence_output)  # Shape: (batch_size, sequence_length, num_labels)\n",
-    "        start_logits, end_logits = logits.split(1, dim=-1)\n",
-    "        start_logits = start_logits.squeeze(-1).contiguous()  # Shape: (batch_size, seq_length)\n",
-    "        end_logits = end_logits.squeeze(-1).contiguous()  # Shape: (batch_size, seq_length)\n",
+    "        hidden = self.fc1(sequence_output)\n",
+    "        hidden = self.relu(hidden)\n",
+    "        hidden = self.dropout(hidden)\n",
+    "        hidden = self.fc2(hidden)\n",
+    "        hidden = self.relu(hidden)\n",
+    "        hidden = self.dropout(hidden)\n",
+    "\n",
+    "        start_logits = self.start_classifier(hidden)  # (batch_size, seq_length, num_labels)\n",
+    "        end_logits = self.end_classifier(hidden)  # (batch_size, seq_length, num_labels)\n",
     "\n",
     "        total_loss = None\n",
     "        if start_positions is not None and end_positions is not None:\n",
@@ -417,7 +255,7 @@
     "            start_positions = start_positions.clamp(0, ignored_index)\n",
     "            end_positions = end_positions.clamp(0, ignored_index)\n",
     "\n",
-    "            batch_size, seq_length = start_logits.shape\n",
+    "            batch_size, seq_length = start_logits.shape[:2]\n",
     "\n",
     "            # Create label tensors for CRF\n",
     "            start_labels = torch.zeros((batch_size, seq_length), dtype=torch.long, device=input_ids.device)\n",
@@ -426,29 +264,68 @@
     "            for i in range(batch_size):\n",
     "                start, end = start_positions[i].item(), end_positions[i].item()\n",
     "                if 0 <= start < seq_length:\n",
-    "                    start_labels[i, start] = 1  # Mark the correct start position\n",
+    "                    start_labels[i, start] = 1 # Mark the correct start position\n",
     "                if 0 <= end < seq_length:\n",
-    "                    end_labels[i, end] = 1  # Mark the correct end position\n",
-    "\n",
-    "            # Stack start and end logits\n",
-    "            stacked_logits = torch.stack([start_logits, end_logits], dim=-1)  # (batch_size, seq_length, 2)\n",
+    "                    end_labels[i, end] = 1 # Mark the correct end position\n",
     "\n",
     "            # Compute CRF loss separately for start and end logits\n",
-    "            start_loss = -self.start_crf(stacked_logits, start_labels, mask=attention_mask.bool(), reduction=\"mean\")\n",
-    "            end_loss = -self.end_crf(stacked_logits, end_labels, mask=attention_mask.bool(), reduction=\"mean\")\n",
+    "            start_loss = -self.start_crf(start_logits, start_labels, mask=attention_mask.bool(), reduction=\"mean\")\n",
+    "            end_loss = -self.end_crf(end_logits, end_labels, mask=attention_mask.bool(), reduction=\"mean\")\n",
     "            total_loss = (start_loss + end_loss) / 2\n",
     "\n",
-    "        if not return_dict:\n",
-    "            output = (start_logits, end_logits) + outputs[2:]\n",
-    "            return ((total_loss,) + output) if total_loss is not None else output\n",
+    "        start_predictions = self.start_crf.decode(start_logits, mask=attention_mask.bool())\n",
+    "        end_predictions = self.end_crf.decode(end_logits, mask=attention_mask.bool())\n",
     "\n",
-    "        return QuestionAnsweringModelOutput(\n",
-    "            loss=total_loss,\n",
-    "            start_logits=start_logits,\n",
-    "            end_logits=end_logits,\n",
-    "            hidden_states=outputs.hidden_states,\n",
-    "            attentions=outputs.attentions,\n",
-    "        )"
+    "        bs, sq = start_logits.shape[:2]\n",
+    "        start_preds = torch.zeros((bs, sq), device=input_ids.device)\n",
+    "        end_preds = torch.zeros((bs, sq), device=input_ids.device)\n",
+    "\n",
+    "        for i, (ss, es) in enumerate(zip(start_predictions, end_predictions)):\n",
+    "            temp = ss.index(1) if 1 in ss else 0\n",
+    "            start_preds[i, temp] = 1\n",
+    "            temp = es.index(1) if 1 in es else 0\n",
+    "            end_preds[i, temp] = 1\n",
+    "\n",
+    "        return (total_loss, start_preds, end_preds) if total_loss is not None else (start_preds, end_preds)\n",
+    "\n",
+    "\n",
+    "def preprocess_evalset(examples):\n",
+    "    inputs = tokenizer(examples['question'], examples['context'], max_length=512,\n",
+    "                truncation='only_second', stride=128, return_overflowing_tokens=True,\n",
+    "                return_offsets_mapping=True, padding='max_length')\n",
+    "\n",
+    "    sample_map = inputs.pop('overflow_to_sample_mapping', list(range((len(inputs['input_ids'])))))\n",
+    "    inputs['example_id'] = [examples['id'][i] for i in sample_map]\n",
+    "    return inputs\n",
+    "\n",
+    "\n",
+    "def post_process_to_compute_em(features, preds):\n",
+    "    start_logits, end_logits = preds.predictions\n",
+    "    label = preds.label_ids\n",
+    "    predictions = {}\n",
+    "    references = {}\n",
+    "    example_to_features = defaultdict(list)\n",
+    "    for i, feature in enumerate(features):\n",
+    "        example_to_features[feature['example_id']].append((i, feature))\n",
+    "        references[feature['example_id']] = str(label[0][i]) + ',' + str(label[1][i])\n",
+    "\n",
+    "    for example_id, feature_list in example_to_features.items():\n",
+    "        best_score = -float(\"inf\")\n",
+    "        best_answer = \"\"\n",
+    "        for idx, features in feature_list:\n",
+    "            offset = features['offset_mapping']\n",
+    "            start_logit = start_logits[idx]\n",
+    "            end_logit = end_logits[idx]\n",
+    "            for start_index in range((len(start_logit))):\n",
+    "                for end_index in range(start_index, len(end_logit)):\n",
+    "                    if offset[start_index] == (0, 0) or offset[end_index] == (0, 0):\n",
+    "                        continue\n",
+    "                    score = start_logit[start_index] + end_logit[end_index]\n",
+    "                    if score > best_score:\n",
+    "                        best_score = score\n",
+    "                        best_answer = f'{start_index},{end_index}'\n",
+    "        predictions[example_id] = best_answer\n",
+    "    return predictions, references"
    ]
   },
   {
@@ -469,7 +346,7 @@
    "outputs": [],
    "source": [
     "training_args_crf = TrainingArguments(output_dir='./results', eval_strategy='epoch',\n",
-    "                learning_rate=2e-5, num_train_epochs=6, weight_decay=0.01,\n",
+    "                learning_rate=1e-5, num_train_epochs=6, weight_decay=0.01,\n",
     "                per_device_train_batch_size=64, per_device_eval_batch_size=64,\n",
     "                report_to='wandb', logging_dir='./logs', logging_steps=50,\n",
     "                label_names=['start_positions', 'end_positions'],)\n",
@@ -486,11 +363,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "final_val_set = dataset['validation'].map(preprocess_evalset, batched=True, remove_columns=dataset[\"validation\"].column_names)\n",
+    "\n",
     "preds = trainer_crf.predict(tokenized_dataset['validation'])\n",
     "\n",
-    "spanbert_crf_em = compute_em(preds)\n",
-    "print(spanbert_crf_em)\n",
-    "print(f\"SpanBERT Exact Match Score: {spanbert_crf_em:.2f} %\")\n",
+    "hopefully_final_predictions, references = post_process_to_compute_em(final_val_set, preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spanbert_crf_em = exact_match_score(predictions=[hopefully_final_predictions[id] for id in references],\n",
+    "                                    references=[references[id] for id in references])\n",
+    "print(spanbert_em)\n",
+    "print(f\"SpanBERT Exact Match Score: {spanbert_em:.2f} %\")\n",
     "\n",
     "wandb.finish()"
    ]
